# AlHosLetMeIn

./: .gitignore  README.md  pyproject.toml
BasicFaceTracking/: README.md
BasicFaceTracking/cs/: BasicFaceTracking.csproj  Scenario1_TrackInWebcam.xaml.cs
archive/: CameraStream.cs
face_detection/: Dockerfile.dlib
face_detection/src/api/: main.py
scripts/: launch.sh  start-node-dss.sh
serv_webrtc/: faces_old.db  launch.sh  pyproject.toml  run-hololens.sh  run.sh
serv_webrtc/docker/: Dockerfile.opencv  Dockerfile.webrtc  entrypoint-webrtc.sh
serv_webrtc/face_processor/: face_box_helper.py  face_stream.py  main.py  recognition.py
serv_webrtc/face_processor/database/: crud.py  database.py  models.py
serv_webrtc/opencv/: CMakeLists.txt  main.cpp
server/: faces.db  launch.sh  pyproject.toml
server/api/: main.py
server/docker/: Dockerfile.api
server/face_api/: main.py
server/face_api/database/: crud.py  database.py
server/tests_e2e/: test_insightface.py  test_send_image.py
webrtc-hololens/Assets/: WSATestCertificate.pfx
webrtc-hololens/Assets/Materials/: Rounded40px.mat
webrtc-hololens/Assets/Scenes/: Main.unity
webrtc-hololens/Assets/Scenes/Example Scenes/: SceneCaptureDemo.unity  SceneCaptureDemoSettings.lighting
webrtc-hololens/Assets/Scripts/: InitiateConnection.cs
webrtc-hololens/Assets/XR/: XRGeneralSettings.asset
webrtc-hololens/Assets/XR/Settings/: OpenXR Package Settings.asset
webrtc-hololens/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
webrtc-hololens/UserSettings/: EditorUserSettings.asset
